tests/snapshots/run_wpt_conformance__coreml_triangular_float16_4D_tensor_options_upper_false_options_diagonal_1.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "triangular.https.any.js",
    "triangular float16 4D tensor options.upper=false options.diagonal=1",
    "coreml",
    "PASS",
)
