tests/snapshots/run_wpt_conformance__coreml_triangular_float32_2D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "triangular.https.any.js",
    "triangular float32 2D tensor default options",
    "coreml",
    "PASS",
)
